lab/code/lab1/syntax.output
State 130 conflicts: 10 shift/reduce
State 136 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier error
    8       | Specifier ExtDecList error

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag
   15                | error Tag

   16 OptTag: ID
   17       | %empty

   18 Tag: ID

   19 VarDec: ID
   20       | VarDec LB INT RB
   21       | VarDec LB FLOAT RB
   22       | VarDec LB error RB

   23 FunDec: ID LP VarList RP
   24       | ID LP RP
   25       | INVALID_ID LP RP

   26 VarList: ParamDec COMMA VarList
   27        | ParamDec

   28 ParamDec: Specifier VarDec

   29 CompSt: LC DefList StmtList RC

   30 StmtList: Stmt StmtList
   31         | %empty

   32 Stmt: Exp SEMI
   33     | CompSt
   34     | RETURN Exp SEMI
   35     | IF LP Exp RP Stmt
   36     | IF LP Exp RP Stmt ELSE Stmt
   37     | WHILE LP Exp RP Stmt
   38     | RETURN error SEMI
   39     | RETURN Exp error
   40     | IF LP Exp RP error ELSE Stmt

   41 DefList: Def DefList
   42        | %empty

   43 Def: Specifier DecList SEMI
   44    | Specifier error SEMI

   45 DecList: Dec
   46        | Dec COMMA DecList

   47 Dec: VarDec
   48    | VarDec ASSIGNOP Exp

   49 Exp: Exp ASSIGNOP Exp
   50    | Exp AND Exp
   51    | Exp OR Exp
   52    | Exp RELOP Exp
   53    | Exp PLUS Exp
   54    | Exp MINUS Exp
   55    | Exp STAR Exp
   56    | Exp DIV Exp
   57    | LP Exp RP
   58    | MINUS Exp
   59    | NOT Exp
   60    | ID LP Args RP
   61    | ID LP RP
   62    | Exp LB Exp RB
   63    | Exp DOT ID
   64    | ID
   65    | INT
   66    | FLOAT
   67    | Exp LB error RB
   68    | Exp PLUS PLUS
   69    | Exp LB ID COMMA ID RB
   70    | LB Exp RP
   71    | INVALID_ID
   72    | Exp RELOP error Exp

   73 Args: Exp COMMA Args
   74     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 8 15 22 38 39 40 44 67 72
INT (258) 20 65
FLOAT (259) 21 66
ID (260) 16 18 19 23 24 60 61 63 64 69
SEMI (261) 4 5 32 34 38 43 44
COMMA (262) 10 26 46 69 73
ASSIGNOP (263) 48 49
RELOP (264) 52 72
PLUS (265) 53 68
MINUS (266) 54 58
STAR (267) 55
DIV (268) 56
AND (269) 50
OR (270) 51
DOT (271) 63
NOT (272) 59
TYPE (273) 11
LP (274) 23 24 25 35 36 37 40 57 60 61
RP (275) 23 24 25 35 36 37 40 57 60 61 70
LB (276) 20 21 22 62 67 69 70
RB (277) 20 21 22 62 67 69
LC (278) 13 29
RC (279) 13 29
STRUCT (280) 13 14
RETURN (281) 34 38 39
IF (282) 35 36 40
ELSE (283) 36 40
WHILE (284) 37
INVALID_ID (285) 25 71


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6 7 8, on right: 2
ExtDecList (35)
    on left: 9 10, on right: 4 8 10
Specifier (36)
    on left: 11 12, on right: 4 5 6 7 8 28 43 44
StructSpecifier (37)
    on left: 13 14 15, on right: 12
OptTag (38)
    on left: 16 17, on right: 13
Tag (39)
    on left: 18, on right: 14 15
VarDec (40)
    on left: 19 20 21 22, on right: 9 10 20 21 22 28 47 48
FunDec (41)
    on left: 23 24 25, on right: 6
VarList (42)
    on left: 26 27, on right: 23 26
ParamDec (43)
    on left: 28, on right: 26 27
CompSt (44)
    on left: 29, on right: 6 33
StmtList (45)
    on left: 30 31, on right: 29 30
Stmt (46)
    on left: 32 33 34 35 36 37 38 39 40, on right: 30 35 36 37 40
DefList (47)
    on left: 41 42, on right: 13 29 41
Def (48)
    on left: 43 44, on right: 41
DecList (49)
    on left: 45 46, on right: 43 46
Dec (50)
    on left: 47 48, on right: 45 46
Exp (51)
    on left: 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
    67 68 69 70 71 72, on right: 32 34 35 36 37 39 40 48 49 50 51 52
    53 54 55 56 57 58 59 62 63 67 68 69 70 72 73 74
Args (52)
    on left: 73 74, on right: 60 73


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

   15 StructSpecifier: error . Tag

    ID  shift, and go to state 9

    Tag  go to state 10


State 2

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 3

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag

    ID  shift, and go to state 11

    $default  reduce using rule 17 (OptTag)

    OptTag  go to state 12
    Tag     go to state 13


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 14


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 15
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . error
    8       | Specifier . ExtDecList error

    error       shift, and go to state 16
    ID          shift, and go to state 17
    SEMI        shift, and go to state 18
    INVALID_ID  shift, and go to state 19

    ExtDecList  go to state 20
    VarDec      go to state 21
    FunDec      go to state 22


State 8

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 9

   18 Tag: ID .

    $default  reduce using rule 18 (Tag)


State 10

   15 StructSpecifier: error Tag .

    $default  reduce using rule 15 (StructSpecifier)


State 11

   16 OptTag: ID .
   18 Tag: ID .

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 18 (Tag)


State 12

   13 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 23


State 13

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


State 14

    0 $accept: Program $end .

    $default  accept


State 15

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 16

    7 ExtDef: Specifier error .

    $default  reduce using rule 7 (ExtDef)


State 17

   19 VarDec: ID .
   23 FunDec: ID . LP VarList RP
   24       | ID . LP RP

    LP  shift, and go to state 24

    $default  reduce using rule 19 (VarDec)


State 18

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 19

   25 FunDec: INVALID_ID . LP RP

    LP  shift, and go to state 25


State 20

    4 ExtDef: Specifier ExtDecList . SEMI
    8       | Specifier ExtDecList . error

    error  shift, and go to state 26
    SEMI   shift, and go to state 27


State 21

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB FLOAT RB
   22       | VarDec . LB error RB

    COMMA  shift, and go to state 28
    LB     shift, and go to state 29

    $default  reduce using rule 9 (ExtDecList)


State 22

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 30

    CompSt  go to state 31


State 23

   13 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 42 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 33
    Def              go to state 34


State 24

   23 FunDec: ID LP . VarList RP
   24       | ID LP . RP

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    RP      shift, and go to state 35
    STRUCT  shift, and go to state 3

    Specifier        go to state 36
    StructSpecifier  go to state 8
    VarList          go to state 37
    ParamDec         go to state 38


State 25

   25 FunDec: INVALID_ID LP . RP

    RP  shift, and go to state 39


State 26

    8 ExtDef: Specifier ExtDecList error .

    $default  reduce using rule 8 (ExtDef)


State 27

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 28

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 40

    ExtDecList  go to state 41
    VarDec      go to state 21


State 29

   20 VarDec: VarDec LB . INT RB
   21       | VarDec LB . FLOAT RB
   22       | VarDec LB . error RB

    error  shift, and go to state 42
    INT    shift, and go to state 43
    FLOAT  shift, and go to state 44


State 30

   29 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    INT         reduce using rule 42 (DefList)
    FLOAT       reduce using rule 42 (DefList)
    ID          reduce using rule 42 (DefList)
    MINUS       reduce using rule 42 (DefList)
    NOT         reduce using rule 42 (DefList)
    LP          reduce using rule 42 (DefList)
    LB          reduce using rule 42 (DefList)
    LC          reduce using rule 42 (DefList)
    RC          reduce using rule 42 (DefList)
    RETURN      reduce using rule 42 (DefList)
    IF          reduce using rule 42 (DefList)
    WHILE       reduce using rule 42 (DefList)
    INVALID_ID  reduce using rule 42 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 45
    Def              go to state 34


State 31

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 32

   43 Def: Specifier . DecList SEMI
   44    | Specifier . error SEMI

    error  shift, and go to state 46
    ID     shift, and go to state 40

    VarDec   go to state 47
    DecList  go to state 48
    Dec      go to state 49


State 33

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 50


State 34

   41 DefList: Def . DefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    INT         reduce using rule 42 (DefList)
    FLOAT       reduce using rule 42 (DefList)
    ID          reduce using rule 42 (DefList)
    MINUS       reduce using rule 42 (DefList)
    NOT         reduce using rule 42 (DefList)
    LP          reduce using rule 42 (DefList)
    LB          reduce using rule 42 (DefList)
    LC          reduce using rule 42 (DefList)
    RC          reduce using rule 42 (DefList)
    RETURN      reduce using rule 42 (DefList)
    IF          reduce using rule 42 (DefList)
    WHILE       reduce using rule 42 (DefList)
    INVALID_ID  reduce using rule 42 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 51
    Def              go to state 34


State 35

   24 FunDec: ID LP RP .

    $default  reduce using rule 24 (FunDec)


State 36

   28 ParamDec: Specifier . VarDec

    ID  shift, and go to state 40

    VarDec  go to state 52


State 37

   23 FunDec: ID LP VarList . RP

    RP  shift, and go to state 53


State 38

   26 VarList: ParamDec . COMMA VarList
   27        | ParamDec .

    COMMA  shift, and go to state 54

    $default  reduce using rule 27 (VarList)


State 39

   25 FunDec: INVALID_ID LP RP .

    $default  reduce using rule 25 (FunDec)


State 40

   19 VarDec: ID .

    $default  reduce using rule 19 (VarDec)


State 41

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 42

   22 VarDec: VarDec LB error . RB

    RB  shift, and go to state 55


State 43

   20 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 56


State 44

   21 VarDec: VarDec LB FLOAT . RB

    RB  shift, and go to state 57


State 45

   29 CompSt: LC DefList . StmtList RC

    INT         shift, and go to state 58
    FLOAT       shift, and go to state 59
    ID          shift, and go to state 60
    MINUS       shift, and go to state 61
    NOT         shift, and go to state 62
    LP          shift, and go to state 63
    LB          shift, and go to state 64
    LC          shift, and go to state 30
    RETURN      shift, and go to state 65
    IF          shift, and go to state 66
    WHILE       shift, and go to state 67
    INVALID_ID  shift, and go to state 68

    $default  reduce using rule 31 (StmtList)

    CompSt    go to state 69
    StmtList  go to state 70
    Stmt      go to state 71
    Exp       go to state 72


State 46

   44 Def: Specifier error . SEMI

    SEMI  shift, and go to state 73


State 47

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB FLOAT RB
   22       | VarDec . LB error RB
   47 Dec: VarDec .
   48    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 74
    LB        shift, and go to state 29

    $default  reduce using rule 47 (Dec)


State 48

   43 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 75


State 49

   45 DecList: Dec .
   46        | Dec . COMMA DecList

    COMMA  shift, and go to state 76

    $default  reduce using rule 45 (DecList)


State 50

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 51

   41 DefList: Def DefList .

    $default  reduce using rule 41 (DefList)


State 52

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB FLOAT RB
   22       | VarDec . LB error RB
   28 ParamDec: Specifier VarDec .

    LB  shift, and go to state 29

    $default  reduce using rule 28 (ParamDec)


State 53

   23 FunDec: ID LP VarList RP .

    $default  reduce using rule 23 (FunDec)


State 54

   26 VarList: ParamDec COMMA . VarList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 36
    StructSpecifier  go to state 8
    VarList          go to state 77
    ParamDec         go to state 38


State 55

   22 VarDec: VarDec LB error RB .

    $default  reduce using rule 22 (VarDec)


State 56

   20 VarDec: VarDec LB INT RB .

    $default  reduce using rule 20 (VarDec)


State 57

   21 VarDec: VarDec LB FLOAT RB .

    $default  reduce using rule 21 (VarDec)


State 58

   65 Exp: INT .

    $default  reduce using rule 65 (Exp)


State 59

   66 Exp: FLOAT .

    $default  reduce using rule 66 (Exp)


State 60

   60 Exp: ID . LP Args RP
   61    | ID . LP RP
   64    | ID .

    LP  shift, and go to state 78

    $default  reduce using rule 64 (Exp)


State 61

   58 Exp: MINUS . Exp

    INT         shift, and go to state 58
    FLOAT       shift, and go to state 59
    ID          shift, and go to state 60
    MINUS       shift, and go to state 61
    NOT         shift, and go to state 62
    LP          shift, and go to state 63
    LB          shift, and go to state 64
    INVALID_ID  shift, and go to state 68

    Exp  go to state 79


State 62

   59 Exp: NOT . Exp

    INT         shift, and go to state 58
    FLOAT       shift, and go to state 59
    ID          shift, and go to state 60
    MINUS       shift, and go to state 61
    NOT         shift, and go to state 62
    LP          shift, and go to state 63
    LB          shift, and go to state 64
    INVALID_ID  shift, and go to state 68

    Exp  go to state 80


State 63

   57 Exp: LP . Exp RP

    INT         shift, and go to state 58
    FLOAT       shift, and go to state 59
    ID          shift, and go to state 60
    MINUS       shift, and go to state 61
    NOT         shift, and go to state 62
    LP          shift, and go to state 63
    LB          shift, and go to state 64
    INVALID_ID  shift, and go to state 68

    Exp  go to state 81


State 64

   70 Exp: LB . Exp RP

    INT         shift, and go to state 58
    FLOAT       shift, and go to state 59
    ID          shift, and go to state 60
    MINUS       shift, and go to state 61
    NOT         shift, and go to state 62
    LP          shift, and go to state 63
    LB          shift, and go to state 64
    INVALID_ID  shift, and go to state 68

    Exp  go to state 82


State 65

   34 Stmt: RETURN . Exp SEMI
   38     | RETURN . error SEMI
   39     | RETURN . Exp error

    error       shift, and go to state 83
    INT         shift, and go to state 58
    FLOAT       shift, and go to state 59
    ID          shift, and go to state 60
    MINUS       shift, and go to state 61
    NOT         shift, and go to state 62
    LP          shift, and go to state 63
    LB          shift, and go to state 64
    INVALID_ID  shift, and go to state 68

    Exp  go to state 84


State 66

   35 Stmt: IF . LP Exp RP Stmt
   36     | IF . LP Exp RP Stmt ELSE Stmt
   40     | IF . LP Exp RP error ELSE Stmt

    LP  shift, and go to state 85


State 67

   37 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 86


State 68

   71 Exp: INVALID_ID .

    $default  reduce using rule 71 (Exp)


State 69

   33 Stmt: CompSt .

    $default  reduce using rule 33 (Stmt)


State 70

   29 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 87


State 71

   30 StmtList: Stmt . StmtList

    INT         shift, and go to state 58
    FLOAT       shift, and go to state 59
    ID          shift, and go to state 60
    MINUS       shift, and go to state 61
    NOT         shift, and go to state 62
    LP          shift, and go to state 63
    LB          shift, and go to state 64
    LC          shift, and go to state 30
    RETURN      shift, and go to state 65
    IF          shift, and go to state 66
    WHILE       shift, and go to state 67
    INVALID_ID  shift, and go to state 68

    $default  reduce using rule 31 (StmtList)

    CompSt    go to state 69
    StmtList  go to state 88
    Stmt      go to state 71
    Exp       go to state 72


State 72

   32 Stmt: Exp . SEMI
   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   67    | Exp . LB error RB
   68    | Exp . PLUS PLUS
   69    | Exp . LB ID COMMA ID RB
   72    | Exp . RELOP error Exp

    SEMI      shift, and go to state 89
    ASSIGNOP  shift, and go to state 90
    RELOP     shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    AND       shift, and go to state 96
    OR        shift, and go to state 97
    DOT       shift, and go to state 98
    LB        shift, and go to state 99


State 73

   44 Def: Specifier error SEMI .

    $default  reduce using rule 44 (Def)


State 74

   48 Dec: VarDec ASSIGNOP . Exp

    INT         shift, and go to state 58
    FLOAT       shift, and go to state 59
    ID          shift, and go to state 60
    MINUS       shift, and go to state 61
    NOT         shift, and go to state 62
    LP          shift, and go to state 63
    LB          shift, and go to state 64
    INVALID_ID  shift, and go to state 68

    Exp  go to state 100


State 75

   43 Def: Specifier DecList SEMI .

    $default  reduce using rule 43 (Def)


State 76

   46 DecList: Dec COMMA . DecList

    ID  shift, and go to state 40

    VarDec   go to state 47
    DecList  go to state 101
    Dec      go to state 49


State 77

   26 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 26 (VarList)


State 78

   60 Exp: ID LP . Args RP
   61    | ID LP . RP

    INT         shift, and go to state 58
    FLOAT       shift, and go to state 59
    ID          shift, and go to state 60
    MINUS       shift, and go to state 61
    NOT         shift, and go to state 62
    LP          shift, and go to state 63
    RP          shift, and go to state 102
    LB          shift, and go to state 64
    INVALID_ID  shift, and go to state 68

    Exp   go to state 103
    Args  go to state 104


State 79

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   58    | MINUS Exp .
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   67    | Exp . LB error RB
   68    | Exp . PLUS PLUS
   69    | Exp . LB ID COMMA ID RB
   72    | Exp . RELOP error Exp

    STAR  shift, and go to state 94
    DIV   shift, and go to state 95
    DOT   shift, and go to state 98
    LB    shift, and go to state 99

    $default  reduce using rule 58 (Exp)


State 80

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   59    | NOT Exp .
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   67    | Exp . LB error RB
   68    | Exp . PLUS PLUS
   69    | Exp . LB ID COMMA ID RB
   72    | Exp . RELOP error Exp

    DOT  shift, and go to state 98
    LB   shift, and go to state 99

    $default  reduce using rule 59 (Exp)


State 81

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   57    | LP Exp . RP
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   67    | Exp . LB error RB
   68    | Exp . PLUS PLUS
   69    | Exp . LB ID COMMA ID RB
   72    | Exp . RELOP error Exp

    ASSIGNOP  shift, and go to state 90
    RELOP     shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    AND       shift, and go to state 96
    OR        shift, and go to state 97
    DOT       shift, and go to state 98
    RP        shift, and go to state 105
    LB        shift, and go to state 99


State 82

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   67    | Exp . LB error RB
   68    | Exp . PLUS PLUS
   69    | Exp . LB ID COMMA ID RB
   70    | LB Exp . RP
   72    | Exp . RELOP error Exp

    ASSIGNOP  shift, and go to state 90
    RELOP     shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    AND       shift, and go to state 96
    OR        shift, and go to state 97
    DOT       shift, and go to state 98
    RP        shift, and go to state 106
    LB        shift, and go to state 99


State 83

   38 Stmt: RETURN error . SEMI

    SEMI  shift, and go to state 107


State 84

   34 Stmt: RETURN Exp . SEMI
   39     | RETURN Exp . error
   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   67    | Exp . LB error RB
   68    | Exp . PLUS PLUS
   69    | Exp . LB ID COMMA ID RB
   72    | Exp . RELOP error Exp

    error     shift, and go to state 108
    SEMI      shift, and go to state 109
    ASSIGNOP  shift, and go to state 90
    RELOP     shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    AND       shift, and go to state 96
    OR        shift, and go to state 97
    DOT       shift, and go to state 98
    LB        shift, and go to state 99


State 85

   35 Stmt: IF LP . Exp RP Stmt
   36     | IF LP . Exp RP Stmt ELSE Stmt
   40     | IF LP . Exp RP error ELSE Stmt

    INT         shift, and go to state 58
    FLOAT       shift, and go to state 59
    ID          shift, and go to state 60
    MINUS       shift, and go to state 61
    NOT         shift, and go to state 62
    LP          shift, and go to state 63
    LB          shift, and go to state 64
    INVALID_ID  shift, and go to state 68

    Exp  go to state 110


State 86

   37 Stmt: WHILE LP . Exp RP Stmt

    INT         shift, and go to state 58
    FLOAT       shift, and go to state 59
    ID          shift, and go to state 60
    MINUS       shift, and go to state 61
    NOT         shift, and go to state 62
    LP          shift, and go to state 63
    LB          shift, and go to state 64
    INVALID_ID  shift, and go to state 68

    Exp  go to state 111


State 87

   29 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 29 (CompSt)


State 88

   30 StmtList: Stmt StmtList .

    $default  reduce using rule 30 (StmtList)


State 89

   32 Stmt: Exp SEMI .

    $default  reduce using rule 32 (Stmt)


State 90

   49 Exp: Exp ASSIGNOP . Exp

    INT         shift, and go to state 58
    FLOAT       shift, and go to state 59
    ID          shift, and go to state 60
    MINUS       shift, and go to state 61
    NOT         shift, and go to state 62
    LP          shift, and go to state 63
    LB          shift, and go to state 64
    INVALID_ID  shift, and go to state 68

    Exp  go to state 112


State 91

   52 Exp: Exp RELOP . Exp
   72    | Exp RELOP . error Exp
